updates & initial launch

--- a/public/resources/resource-author/email-templates/index.html
+++ b/public/resources/resource-author/email-templates/index.html
@@ -91,7 +91,7 @@
         "name": "twg"
     },
     "publisher": {
-        "@type": "Organization",
+        "@type": "EducationalOrganization",
         "name": "Name Change Policy Working Group",
         "logo": {
             "@type": "ImageObject",
