deploy: 22d2e64ef5beb55b7517b63e0b60785f4232b774

--- a/resources/press/index.html
+++ b/resources/press/index.html
@@ -94,6 +94,9 @@
 <li>
 <p>Space.com: <a href=https://www.space.com/transgender-astronomers-name-update-scientific-journals>Transgender astronomers speak out about outdated name change policies</a>. Quotes from Emily Hunt, 1 July 2021.</p>
 </li>
+<li>
+<p>Nature: <a href=https://doi.org/10.1038/d41586-021-02014-7>Scientific publishers expedite name changes for authors</a>. Quotes from Theresa Tanenbaum, 21 July 2021.</p>
+</li>
 </ul>
 <h2 id=press-releases-by-publishers>Press Releases by Publishers</h2>
 <ul>
