deploy: 19e22180f02c39658fa7f57561b9bae853335238

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html><html lang=en><meta charset=utf-8>
 <meta name=viewport content="width=device-width">
 <title>Name Change Policy Working Group</title>
+<meta name=generator content="Hugo Eureka 0.8.3-dev">
 <link rel=stylesheet href=/css/eureka.min.css>
 <script defer src=/js/eureka.min.js></script>
 <link rel=preconnect href=https://fonts.gstatic.com crossorigin>
@@ -57,7 +58,7 @@
 <div class="fixed hidden inset-0 opacity-0 h-full w-full cursor-default z-0" id=is-open-mobile>
 </div>
 </nav>
-<script>let element=document.getElementById('lightDarkMode');storageColorScheme==null||storageColorScheme=='Auto'?document.addEventListener('DOMContentLoaded',()=>{switchMode('Auto')}):storageColorScheme=="Light"?(element.firstElementChild.classList.remove('fa-adjust'),element.firstElementChild.setAttribute("data-icon",'sun'),element.firstElementChild.classList.add('fa-sun')):storageColorScheme=="Dark"&&(element.firstElementChild.classList.remove('fa-adjust'),element.firstElementChild.setAttribute("data-icon",'moon'),element.firstElementChild.classList.add('fa-moon')),document.addEventListener('DOMContentLoaded',()=>{getcolorscheme(),switchBurger()})</script>
+<script>let element=document.getElementById('lightDarkMode');storageColorScheme==null||storageColorScheme=='Auto'?document.addEventListener('DOMContentLoaded',()=>{window.matchMedia("(prefers-color-scheme: dark)").addEventListener('change',switchDarkMode)}):storageColorScheme=="Light"?(element.firstElementChild.classList.remove('fa-adjust'),element.firstElementChild.setAttribute("data-icon",'sun'),element.firstElementChild.classList.add('fa-sun')):storageColorScheme=="Dark"&&(element.firstElementChild.classList.remove('fa-adjust'),element.firstElementChild.setAttribute("data-icon",'moon'),element.firstElementChild.classList.add('fa-moon')),document.addEventListener('DOMContentLoaded',()=>{getcolorscheme(),switchBurger()})</script>
 </div>
 </header>
 <main class="flex-grow pt-16">
@@ -95,6 +96,7 @@
 </div>
 </div>
 <div class=content>
+<p><img src=/images/NCPWGIcon.png#center alt="Example image"></p>
 <h2 id=introduction>Introduction</h2>
 <p>The <a href=/authors/twg/>Trans Name Change Policy Working Group</a> was founded to encourage the amendment or updating of publisher name change policies for transgender, nonbinary, gender non-conforming authors who have been deeply harmed from publisher policies. These policies have also harmed people who change their names due to marriage or divorce, indigenous authors with name changes, or foreign authors with misspellings.</p>
 <p>This page serves as a knowledge and resource base for the working group, interested individuals, and others. It contains <a href=/resources/authors/>resources for authors</a> who want to update their name on previously published work, <a href=/resources/publishers/>resources for publishers</a> who are working to introduce a name change policy and a list of <a href=/resources/press/>articles and press releases that cite our working group or individual members</a>.</p>
@@ -152,7 +154,7 @@ This section includes resources for authors: A list of publishers and journals w
 </div>
 <div class="mr-6 my-2">
 <i class="fas fa-clock mr-1"></i>
-<span>2 min read</span>
+<span>4 min read</span>
 </div>
 </div>
 </div>
@@ -219,7 +221,7 @@ This section includes resources for publishers who want to introduce a name chan
 <div class="max-w-screen-xl mx-auto">
 <div id=blank class="lg:w-3/4 mx-auto px-6 md:px-8 xl:px-12 py-12">
 <div style=text-align:center>
-<p>CC-BY-NC. Some bottom thing</p>
+<p>CC-BY-NC.</p>
 </div>
 </div>
 </div>
